--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,11 @@ dependencies {
 
     implementation("io.coil-kt:coil-compose:2.2.2")
 
+    def paging_version = "3.1.1"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha17"
+
 }
 
 kapt {
