--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0" //https://stackoverflow.com/a/73672494
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    //https://stackoverflow.com/a/73672494
     //https://developer.android.com/jetpack/androidx/releases/hilt#hilt-navigation-compose_version_100_2
 
     implementation "com.google.dagger:hilt-android:2.44"
@@ -85,13 +86,16 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
 
-    def lifecycle_version = "2.5.1"
+    def lifecycle_version = "2.6.0-alpha03"
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // ViewModel utilities for Compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     implementation "androidx.compose.runtime:runtime-livedata:1.3.1"
+
+    //https://medium.com/androiddevelopers/consuming-flows-safely-in-jetpack-compose-cde014d0d5a3
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
 
     implementation("io.coil-kt:coil-compose:2.2.2")
 
