--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.squareup.moshi:moshi-kotlin:1.14.0")
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation("com.squareup.moshi:moshi:1.14.0")
+    implementation 'com.squareup.moshi:moshi-adapters:1.14.0'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
