--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -104,6 +105,8 @@ dependencies {
     implementation "androidx.security:security-crypto:1.0.0"
 
     implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
 }
 
 kapt {
