--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,15 @@ buildscript {
     ext {
         compose_ui_version = '1.5.0-beta02'
         lifecycle_version = '2.6.1'
-        paging_version = '3.2.0-rc01'
+        paging_version = '3.2.0'
         nav_version = '2.6.0'
+        kotlin_version = '1.8.21'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.21' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version" apply false
 }
