--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
+
+    implementation "androidx.browser:browser:1.5.0"
 }
 
 kapt {
