--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
         paging_version = '3.2.0'
         nav_version = '2.6.0'
         kotlin_version = '1.8.21'
+        room_version = '2.5.2'
     }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '8.0.2' apply false
