--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,7 +121,8 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
-    implementation 'com.github.mutkuensert:Android-Phase:v1.2.0.0'
+    implementation 'com.github.mutkuensert:Android-Phase:v2.0.0'
+    implementation 'com.github.mutkuensert:Android-Phase-Compose-Extension:v1.0.0'
 }
 
 kapt {
