--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -47,4 +47,6 @@ dependencies {
 
     implementation "com.github.mutkuensert:Android-Phase:$versions.androidPhase"
     implementation "com.github.mutkuensert:Android-Phase-Compose-Extension:$versions.androidPhaseCompose"
+
+    implementation "androidx.palette:palette:$versions.palette"
 }
