--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,4 +17,6 @@ dependencies {
     implementation project(':resources')
 
     implementation "androidx.activity:activity-compose:$versions.activityCompose"
+    implementation "androidx.compose.ui:ui:$versions.composeUi"
+    implementation "androidx.compose.material:material:$versions.composeUi"
 }
