--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
                 androidPhaseCompose  : 'v1.0.0',
                 browser              : '1.7.0',
                 coil                 : '2.5.0',
-                composeUi            : '1.5.0-beta02',
+                composeBom           : '2024.01.00',
                 core                 : '1.12.0',
                 coroutines           : '1.7.1',
                 dagger               : dagger_version,
